--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,19 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.1.0"
+  
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.4.4
     hooks:
-      - id: prettier
-  - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
-    rev: "2.7.3"
-    hooks:
-      - id: editorconfig-checker
-        alias: ec
+      # Run the linter.
+      - id: ruff
+        args: [ --fix ]
+      # Run the formatter.
+      - id: ruff-format
 
   - repo: local
     hooks:
       - id: parameter_docs
         name: parameter_docs
-        entry: nf-core schema docs -f -o docs/parameters.md
-        language: system
+        entry: schema_doc.sh
+        language: script
         pass_filenames: false
