--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,7 +18,7 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: 'split_fastq' {
+    withName: 'SPLIT_FASTQ' {
         ext.args   = { params.split_to_well ? "--split_to_well" : '' }
     }
 
